# constructIM

./: Makefile.am  README.md  autogen.sh  configure.ac
include/ircd/: Makefile.am  asio.h  exception.h  fmt.h  ircd.h  panic.h  portable.h  run.h  stats.h  stdinc.h  stduse.h  string_view.h  strl.h  strn.h  terminate.h  time.h  vector_view.h
include/ircd/allocator/: allocator.h  callback.h  dynamic.h  fixed.h  node.h  profile.h  scope.h  state.h  twolevel.h
include/ircd/buffer/: buffer.h  buffer_base.h  buffers.h  const_buffer.h  copy.h  fixed_buffer.h  move.h  mutable_buffer.h  parse_buffer.h  shared_buffer.h  unique_buffer.h  window_buffer.h
include/ircd/ctx/: async.h  concurrent.h  concurrent_for_each.h  condition_variable.h  context.h  continuation.h  critical_assertion.h  critical_indicator.h  ctx.h  dock.h  exception_handler.h  fault.h  future.h  latch.h  list.h  mutex.h  ole.h  pool.h  posix.h  prof.h  promise.h  queue.h  scope_notify.h  shared_mutex.h  shared_state.h  sleep.h  slice_usage_warning.h  stack.h  stack_usage_assertion.h  this_ctx.h  trit.h  uninterruptible.h  unlock_guard.h  upgrade_lock.h  view.h  wait.h  when.h
include/ircd/ios/: asio.h  descriptor.h  dispatch.h  empt.h  epoll.h  handler.h  ios.h
include/ircd/prof/: arm.h  cycles.h  prof.h  x86.h
include/ircd/util/: align.h  closure.h  enum.h  instance_list.h  mask.h  nothrow.h  pretty.h  pubsetbuf.h  scope_count.h  scope_restore.h  string.h  typography.h  unit_literal.h  unwind.h  util.h  va_rtti.h  what.h
ircd/: Makefile.am  allocator.cc  allocator_gnu.cc  allocator_je.cc  ctx.cc  ctx.h  ctx_eh.cc  ctx_ole.cc  ctx_posix.cc  ctx_posix.h  ctx_x86_64.S  exception.cc  ios.cc  ircd.cc  run.cc  stats.cc  timedate.cc  util.cc
test/: Makefile.am  test_allocator.cc  test_buffer.cc  test_ctx.cc  test_env.cc  test_system_time.cc
